src/objects/AMI_Chart__mdt.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Household__c</fullName>
        <label>Num of Household</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_of_Median__c</fullName>
        <label>Percent of Median</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HUD Unadjusted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>HCD/TCAC</fullName>
                </value>
                <value>
                    <fullName>Non-HERA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AMI Chart</label>
    <pluralLabel>AMI Charts</pluralLabel>
</CustomObject>